Feature/use presenter (#4)
* feat(getCustomer): try to use presenter

* feat(GetCustomer): use presenter

* feat(GetCar): use presenter

* feat(GetPlanningCar): use presenter

* feat(GetPlanningCar): add hateoas

* feat(BookingCar): add presenter + hateoas

Co-authored-by: Benjamin <benjamin.corre@gmail.com>