@@ -33,11 +33,11 @@ public class InMemoryStoreBookedCars implements StoreBookedCars {
         return bookedCarMap.values()
                 .stream()
                 .filter(bookedCar -> bookedCar.getPeriod().hasIntersectionWith(period))
-                .collect(Collectors.toList());
+               .toList();
     }
 
     @Override
     public List<BookedCar> getBookedCarByCarAndPeriod(Car car, Period period) {
-        return getAll(period).stream().filter(bookedCar -> bookedCar.getIdCar().equals(car.getId())).collect(Collectors.toList());
+        return getAll(period).stream().filter(bookedCar -> bookedCar.getIdCar().equals(car.getId())).toList();
     }
 }
